detail changes